# rpi0-cross-compile

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.deb  README.md  Taskfile.dist.yaml  config.h.in  hello-world.c  main.c
.devcontainer/: Dockerfile  Taskfile.dist.yaml  devcontainer.env  devcontainer.json  llvm.list
cmake/: arch-specific.cmake  arm-linux-gnueabihf.toolchain.cmake  arm-none-linux-gnueabihf.toolchain.cmake  armv6-unknown-linux-gnueabihf.toolchain.cmake  extract-crt-specs.cmake  gcc-search-dirs.cmake  process-crt-files.cmake
cpack/: post-build-deb-info.cmake  post-build-lintian.cmake  suppressed-tags.txt
task.d/arm-linux-gnueabihf/: Taskfile.dist.yaml
task.d/armv6-unknown-linux-gnueabihf/: Taskfile.dist.yaml
